# flask-pydantic-spec

./: CHANGES.rst  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-test.yaml  publish.yaml  pythonpackage.yml  test-static-analysis.yml
docs/source/: conf.py  config.rst  flask_backend.rst  index.rst  spec.rst  types.rst  utils.rst
examples/: class_view.py  flask_demo.py
flask_pydantic_openapi/: __init__.py  config.py  flask_backend.py  spec.py  types.py  utils.py
flask_pydantic_spec/: __init__.py  compat.py  config.py  constants.py  flask_backend.py  page.py  spec.py  types.py  utils.py
requirements/: development.txt  production.txt
spectree/: flask_backend.py  spec.py
tests/: common.py  test_config.py  test_plugin.py  test_plugin_flask.py  test_response.py  test_spec.py  test_utils.py
tests/spec/: test_app.py  test_blueprint.py
