[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_pydantic_spec"
version = "0.8.7"
description = "generate OpenAPI document and validate request & response with Python annotations."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Chris Gearing", email = "chris.gearing@turntown.digital" },
    { name = "Simon Hayward" },
    { name = "Rob Young" },
    { name = "Donald Fleming" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2",
    "inflection>=0.5.0,<1",
]

[project.urls]
Homepage = "https://github.com/turner-townsend/flask-pydantic-spec"

[project.optional-dependencies]
flask = ["flask"]

[tool.hatch.build.targets.wheel]
packages = ["flask_pydantic_spec"]

[dependency-groups]
dev = [
    "openapi-spec-validator==0.7.1",
    "pytest>=8.3.5,<9",
    "flake8==7.1.1",
    "flask>=2.0.2,<3",
    "requests>=2.24.0,<3",
    "black>=20.8b1",
    "mypy==1.10.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
ignore_missing_imports = true
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
